add drizzle: orm for database

--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "migrations:generate": "drizzle-kit generate:mysql",
+    "migrations:push": "node -r esbuild-register src/lib/db/migrate.ts",
+    "db:push": "drizzle-kit push:mysql",
+    "migrations:drop": "drizzle-kit drop --config=drizzle.config.ts"
   },
   "dependencies": {
     "@radix-ui/react-aspect-ratio": "^1.0.3",
