--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 /.pnp
 .pnp.js
 .yarn/install-state.gz
-/drizzle
+/drizzle/
 
 # testing
 /coverage
@@ -27,7 +27,8 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
-.env*
+.env*.local
+.env
 
 # vercel
 .vercel
