--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "migrations:drop": "drizzle-kit drop --config=drizzle.config.ts"
   },
   "dependencies": {
+    "@auth/drizzle-adapter": "^0.7.0",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -21,22 +22,26 @@
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "dotenv": "^16.4.4",
-    "drizzle-orm": "^0.29.3",
+    "drizzle-orm": "^0.29.4",
     "embla-carousel-react": "^8.0.0",
     "lucide-react": "^0.334.0",
     "mysql2": "^3.9.1",
     "next": "14.1.0",
+    "next-auth": "^5.0.0-beta.13",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
     "sonner": "^1.4.1",
     "tailwind-merge": "^2.2.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
