--- a/package.json
+++ b/package.json
@@ -27,12 +27,13 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "dotenv": "^16.4.4",
-    "drizzle-orm": "^0.29.4",
+    "drizzle-orm": "^0.29.5",
+    "embla-carousel-autoplay": "^8.0.0",
     "embla-carousel-react": "^8.0.0",
     "lucide-react": "^0.334.0",
     "mysql2": "^3.9.1",
     "next": "14.1.0",
-    "next-auth": "^5.0.0-beta.13",
+    "next-auth": "^4.24.7",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
@@ -40,6 +41,7 @@
     "sonner": "^1.4.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
+    "uniqid": "^5.4.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -47,11 +49,14 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uniqid": "^5.3.4",
     "autoprefixer": "^10.0.1",
     "drizzle-kit": "^0.20.14",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "postcss": "^8",
+    "prettier": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.5.12",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
