--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
+    "@uploadthing/react": "^6.4.0",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -33,7 +34,7 @@
     "embla-carousel-react": "^8.0.0",
     "lucide-react": "^0.334.0",
     "mysql2": "^3.9.2",
-    "next": "^14.1.3",
+    "next": "^14.1.4",
     "next-auth": "^4.24.7",
     "next-themes": "^0.2.1",
     "react": "^18",
@@ -43,6 +44,7 @@
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "uniqid": "^5.4.0",
+    "uploadthing": "^6.6.0",
     "uuid": "^9.0.1",
     "zod": "^3.22.4"
   },
