--- a/package.json
+++ b/package.json
@@ -7,14 +7,15 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "migrations:generate": "drizzle-kit generate:mysql",
+    "migrations:generate": "drizzle-kit generate:pg",
     "migrations:push": "node -r esbuild-register src/lib/db/migrate.ts",
-    "db:push": "drizzle-kit push:mysql",
+    "db:push": "drizzle-kit push:pg",
     "migrations:drop": "drizzle-kit drop --config=drizzle.config.ts"
   },
   "dependencies": {
     "@auth/drizzle-adapter": "^0.7.0",
     "@hookform/resolvers": "^3.3.4",
+    "@neondatabase/serverless": "^0.9.0",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -29,7 +30,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "dotenv": "^16.4.4",
-    "drizzle-orm": "^0.30.2",
+    "drizzle-orm": "^0.30.8",
     "embla-carousel-autoplay": "^8.0.0",
     "embla-carousel-react": "^8.0.0",
     "lucide-react": "^0.334.0",
