--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
     "start": "next start",
     "lint": "next lint",
     "migrations:generate": "drizzle-kit generate:pg",
-    "migrations:push": "node -r esbuild-register src/lib/db/migrate.ts",
+    "migrations:push": "node -r esbuild-register src/drizzle/migrate.ts",
     "db:push": "drizzle-kit push:pg",
     "migrations:drop": "drizzle-kit drop --config=drizzle.config.ts"
   },
   "dependencies": {
     "@auth/drizzle-adapter": "^0.7.0",
     "@hookform/resolvers": "^3.3.4",
-    "@neondatabase/serverless": "^0.9.0",
+    "@next/env": "^14.2.3",
     "@paralleldrive/cuid2": "^2.2.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
@@ -29,17 +29,19 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "@uploadthing/react": "^6.4.0",
+    "@vercel/postgres": "^0.8.0",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "dotenv": "^16.4.4",
-    "drizzle-orm": "^0.30.8",
+    "drizzle-orm": "^0.30.9",
     "embla-carousel-autoplay": "^8.0.0",
     "embla-carousel-react": "^8.0.0",
     "lucide-react": "^0.334.0",
     "next": "^14.1.4",
     "next-auth": "^4.24.7",
     "next-themes": "^0.2.1",
+    "pg": "^8.11.5",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.0",
@@ -63,7 +65,6 @@
     "drizzle-kit": "^0.20.17",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
-    "pg": "^8.11.5",
     "postcss": "^8",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.12",
