--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.51.0",
     "react-icons": "^5.0.1",
+    "react-usestateref": "^1.0.8",
     "sharp": "^0.33.3",
     "sonner": "^1.4.1",
     "tailwind-merge": "^2.2.1",
