--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "drizzle-orm": "^0.30.9",
     "embla-carousel-autoplay": "^8.0.0",
     "embla-carousel-react": "^8.0.0",
+    "fuse.js": "^7.0.0",
     "lucide-react": "^0.334.0",
     "next": "^14.1.4",
     "next-auth": "^4.24.7",
