--- a/package.json
+++ b/package.json
@@ -28,11 +28,14 @@
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
+    "@tanstack/react-query": "^5.35.1",
     "@uploadthing/react": "^6.4.0",
     "@vercel/postgres": "^0.8.0",
+    "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "cmdk": "^1.0.0",
     "dotenv": "^16.4.4",
     "drizzle-orm": "^0.30.9",
     "embla-carousel-autoplay": "^8.0.0",
