--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
     "dotenv": "^16.4.4",
-    "drizzle-orm": "^0.30.9",
+    "drizzle-orm": "^0.30.10",
     "embla-carousel-autoplay": "^8.0.0",
     "embla-carousel-react": "^8.0.0",
     "fuse.js": "^7.0.0",
@@ -51,6 +51,7 @@
     "react-hook-form": "^7.51.0",
     "react-icons": "^5.0.1",
     "react-usestateref": "^1.0.8",
+    "resend": "^3.2.0",
     "sharp": "^0.33.3",
     "sonner": "^1.4.1",
     "tailwind-merge": "^2.2.1",
@@ -67,7 +68,7 @@
     "@types/uniqid": "^5.3.4",
     "@types/uuid": "^9.0.8",
     "autoprefixer": "^10.0.1",
-    "drizzle-kit": "^0.20.17",
+    "drizzle-kit": "^0.21.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "postcss": "^8",
