--- a/package.json
+++ b/package.json
@@ -50,7 +50,6 @@
     "next": "^14.1.4",
     "next-auth": "^4.24.7",
     "next-themes": "^0.2.1",
-    "pg": "^8.11.5",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.0",
@@ -68,14 +67,16 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
+    "@types/pg": "^8.11.6",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/uniqid": "^5.3.4",
     "@types/uuid": "^9.0.8",
     "autoprefixer": "^10.0.1",
-    "drizzle-kit": "^0.21.2",
+    "drizzle-kit": "^0.21.4",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
+    "pg": "^8.12.0",
     "postcss": "^8",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.12",
