--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
+    "@react-email/components": "0.0.19",
     "@tanstack/react-query": "^5.35.1",
     "@tanstack/react-table": "^8.17.3",
     "@uploadthing/react": "^6.4.0",
@@ -52,6 +53,7 @@
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-email": "2.1.4",
     "react-hook-form": "^7.51.0",
     "react-icons": "^5.0.1",
     "react-usestateref": "^1.0.8",
